wxmaximadatadir = ${datadir}/wxMaxima
wxmaximadata_DATA = tips.txt wxmathml.lisp wxmaxima.png wxmaxima.svg autocomplete.txt

EXTRA_DIST = tips.txt wxmathml.lisp wxmaxima.png wxmaxima.svg Info.plist.in PkgInfo autocomplete.txt

appdatadir = $(datarootdir)/appdata
dist_appdata_DATA = wxmaxima.appdata.xml

mimedatadir = $(datarootdir)/mime/application
dist_appdata_DATA = wxmathml.xml wxmbatch.xml
