wxmaximadatadir = ${datadir}/wxMaxima
wxmaximadata_DATA = tips.txt wxmathml.lisp wxmaxima.png wxmaxima.svg autocomplete.txt

bashcompletiondir = ${datarootdir}/bash-completion/completions
bashcompletion_DATA = wxmaxima

EXTRA_DIST = wxmaxima tips.txt wxmathml.lisp wxmaxima.png wxmaxima.svg Info.plist.in PkgInfo autocomplete.txt winrc/wxmaxima.manifest dylibs.sed winrc/wxmac-doc.ico winrc/maximaicon.ico

appdatadir = $(datarootdir)/metainfo
dist_appdata_DATA = wxMaxima.appdata.xml

appicondir = $(datarootdir)/pixmaps
dist_appicon_DATA = wxmaxima.svg wxmaxima.png text-x-wxmaxima-batch.svg text-x-wxmathml.svg wxmaxima-16.xpm wxmaxima-32.xpm


mandatadir = $(datadir)/man/man1
dist_mandata_DATA = wxmaxima.1

mimedatadir = $(datarootdir)/mime/packages
dist_mimedata_DATA = x-wxmathml.xml x-wxmaxima-batch.xml

desktopdir = $(datarootdir)/applications
dist_desktop_DATA = wxMaxima.desktop
